{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 38,
  "lineage": "89d14059-9f02-2bca-bfe2-f00ed7ac0adc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lab-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:827753641239:loadbalancer/app/lab-alb/a534e9d595259297",
            "arn_suffix": "app/lab-alb/a534e9d595259297",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lab-alb-892180244.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:827753641239:loadbalancer/app/lab-alb/a534e9d595259297",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lab-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b4fdbda451376add"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0659c2f344309404f"
              },
              {
                "subnet_id": "subnet-099b097e0e5ca2088"
              }
            ],
            "subnets": [
              "subnet-0659c2f344309404f",
              "subnet-099b097e0e5ca2088"
            ],
            "tags": {
              "Name": "lab-alb"
            },
            "tags_all": {
              "Name": "lab-alb"
            },
            "vpc_id": "vpc-0a29bcc23978eda9d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lab-alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lab-alb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:827753641239:listener/app/lab-alb/a534e9d595259297/fa6f13e137b0a56a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:827753641239:targetgroup/lab-target-group/7ab91172d876d3c6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:827753641239:listener/app/lab-alb/a534e9d595259297/fa6f13e137b0a56a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:827753641239:loadbalancer/app/lab-alb/a534e9d595259297",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lab-alb",
            "aws_lb_target_group.lab-target-group",
            "aws_security_group.lab-alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lab-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:827753641239:targetgroup/lab-target-group/7ab91172d876d3c6",
            "arn_suffix": "targetgroup/lab-target-group/7ab91172d876d3c6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:827753641239:targetgroup/lab-target-group/7ab91172d876d3c6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lab-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a29bcc23978eda9d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827753641239:security-group/sg-0b4fdbda451376add",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b4fdbda451376add",
            "ingress": [],
            "name": "lab-alb-sg",
            "name_prefix": "",
            "owner_id": "827753641239",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a29bcc23978eda9d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-739238845",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b4fdbda451376add",
            "security_group_rule_id": "sgr-086db136a8e973f94",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lab-alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1299363955",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b4fdbda451376add",
            "security_group_rule_id": "sgr-0a0531c69fd82f335",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lab-alb-sg"
          ]
        }
      ]
    }
  ]
}